# napari-jupyterbook

./: README.md  home.md  myst.yml  pyproject.toml
.github/workflows/: pages.yml
matrix/: 00_baseline.md  01_sleep.md  02_resize.md  03_process_events.md  04_canvas_only.md  05_viewer_close.md  06_multiple_viewers.md  07_3d_mode.md  08_combined.md  09_kernel_keepalive.md  10_no_close.md  11_size_diagnostic.md  12_floating_validation.md
notebooks/: 02_intro_bioimage_viz.md  files.md  scipy-intro-bioimage-viz.md
resources/: napari-theme.css
scripts/: seed_napari_geometry.py
